# SemesterAverage

./: README.md
src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
src/school/: CMakeLists.txt  student.cpp  student.h
